Fixed alignments

--- a/main.css
+++ b/main.css
@@ -13,6 +13,11 @@ body {
                                     supported by Chrome and Opera */
 }  
 
+.codebox {
+    font-family: monospace;
+    background-color: #e3e3e3;
+}
+
 .section.section-grey {
     background-color: rgb(245, 245, 245);
 }
@@ -22,6 +27,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;  
+    background-position: center;
 }
 
 /* general */
@@ -46,7 +52,7 @@ ul {
     height: 2px;
     border-radius: 50px;
     background: #43015485;
-    width: 14rem;
+    width: 10rem;
 }
 
 .divider.is-centered {
@@ -78,6 +84,11 @@ h1.heading:after {
 }
 
 /* main */
+css-doodle {
+    border: 2px solid #30003b;
+    background: #440154;
+}
+
 .main-text {
     position: absolute;
     margin-left: auto;
@@ -88,7 +99,7 @@ h1.heading:after {
 }
 
 .main-container {
-    background-color: #440154;
+    background-color: #3B046B;
 }
 
 img.main {
@@ -115,7 +126,8 @@ img.main {
     box-shadow: -1px 3px 15px 0 rgb(0 0 0 / 6%);
     border: 1px solid #e3e3e3;
     border-radius: 5px;
-    padding: 3rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
     margin: 1rem;
     flex: 1;
 }
@@ -136,7 +148,7 @@ h3.features {
 }
 
 img.features {
-    padding: 20px;
+    padding: 0px;
 }
 
 p.features {
@@ -179,6 +191,10 @@ img.how {
 
 .navbar-burger span {
     color: white;
+}
+
+.navbar-menu {
+    background-color: #56006b;
 }
 
 /* footer */
